--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo 'todo'",
     "dev": "pnpm --filter @bin-element/play dev",
     "docs:dev": "pnpm --filter @bin-element/docs dev",
     "docs:build": "pnpm --filter @bin-element/docs build"
