--- a/packages/play/package.json
+++ b/packages/play/package.json
@@ -6,9 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2"
+    "@chromatic-com/storybook": "3.2.2",
+    "@storybook/addon-essentials": "8.4.4",
+    "@storybook/addon-interactions": "8.4.4",
+    "@storybook/addon-onboarding": "8.4.4",
+    "@storybook/blocks": "8.4.4",
+    "@storybook/test": "8.4.4",
+    "@storybook/vue3": "8.4.4",
+    "@storybook/vue3-vite": "8.4.4",
+    "@vitejs/plugin-vue": "^5.1.2",
+    "storybook": "8.4.4"
   }
 }
